# a-hat-optimizer

./: README.md  pyproject.toml
a_hat_optimizer/: __init__.py  calibrator.py  core.py  extractor.py  hook.py
a_hat_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: quickstart.py
tests/: test_core.py
